# gecko-libxjson

./: .gitignore  CMakeLists.txt  LICENCE.md
include/brooks/: brooks.h  brooks_doc.h  brooks_misc.h  brooks_pool.h  brooks_query.h
include/brooks/query/: brooks_cursor.h  brooks_operator.h
include/brooks/query/operators/scans/: brooks_scan_arrays.h  brooks_scan_objects.h  brooks_scan_strings.h
include/opendsb/: TODO  main.c  odsb_datagen.h
include/xjson/: xjson-json.h  xjson-misc.h  xjson-pool.h  xjson-query.h  xjson.h
samples/: sample-basics.c
src/brooks/: brooks_doc.c  brooks_misc.c  brooks_pool.c  brooks_query.c
src/brooks/query/: brooks_cursor.c  brooks_operator.c
src/brooks/query/operators/scans/: brooks_scan_array.c  brooks_scan_objects.c
src/xjson/: xjson-json.c  xjson-pool.c  xjson.c  xjson_misc.c  xjson_query.c
